<resources>
    <string name="app_name">SFCS</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Name">Name</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EmailAddress">Email Address</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Are you sure want to logout ?</string>
    <string name="dialog_popup">SFCS</string>
    <string name="ok" />
    <string name="cancel">Cancel</string>
    <string name="stall">Stall</string>
    <string name="type">Type</string>
    <string name="change">Change</string>
    <string name="go">Continue</string>
    <string name="change_password">Change Password</string>
    <string name="change_food">Change Food</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="restore_password">Account Recovery</string>
    <string name="add">Add</string>
    <string name='not_receive_info'>Not receive info</string>
    <string name='not_receive_info_err'>Not receive info error</string>
</resources>