<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtRestorePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/restore_password"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/UserName"
        android:layout_below="@id/txtRestorePassword"/>

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="text"
        android:hint="Email Address"
        android:layout_below="@id/edtUserName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edtEmailAddress">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#E0E0E0"
            android:text="@string/cancel"
            android:clickable="true"
            />
        <Button
            android:id="@+id/dialog_go"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#E0E0E0"
            android:text="@string/go"
            android:clickable="true"
            />

    </LinearLayout>

</RelativeLayout>