<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/change_password"/>

    <EditText
        android:id="@+id/edtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/old_password"
        android:layout_below="@id/txtChangePassword"/>

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/new_password"
        android:layout_below="@id/edtOldPassword" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/confirm_new_password"
        android:layout_below="@id/edtNewPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edtConfirmNewPassword">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#E0E0E0"
            android:text="Cancel"
            android:clickable="true"
            />
        <Button
            android:id="@+id/dialog_change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#E0E0E0"
            android:text="Change"
            android:clickable="true"
            />

    </LinearLayout>

</RelativeLayout>